# rag_personal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
doc/: design.md  mvp-plan.md
eval/: gold.jsonl
memory/: MEMORY.md  project_rag_pipeline.md
src/: config.rs  lib.rs  main.rs  pipeline.rs  retrieve.rs
src/chunk/: chunk_builder.rs  mod.rs  structure.rs
src/embed/: fastembed_embedder.rs  mod.rs
src/eval/: mod.rs  recall.rs
src/lexical/: mod.rs  tantivy_index.rs
src/mcp/: mod.rs  server.rs
src/retrieve/: dense_retriever.rs  hybrid_retriever.rs  lexical_retriever.rs  mod.rs
src/source/: dto.rs  mod.rs  notion.rs  notion_source.rs
src/source/dto/: notion.rs
src/store/: lance_store.rs  mod.rs
