[package]
name = "rag_personal"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap ={ version= "4" , features=["derive"]}
# dotenvy = "0.15"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}
fastembed = "5.15"
lancedb = "0.30"
arrow = "58"
futures = "0.3"
tantivy = "0.26"
tantivy-jieba = "0.20"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }

[dev-dependencies]
wiremock = "0.6"
